Task Management App New

--- a/src/index.css
+++ b/src/index.css
@@ -1,149 +1,13 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
-
-* {
+body {
   margin: 0;
-  padding: 0;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
-h1 {
-  font-size: 6rem;
-  font-weight: 800;
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
 }
-
-h2 {
-  font-size: 4rem;
-  font-weight: 700;
-}
-
-h3 {
-  font-size: 3rem;
-  font-weight: 600;
-}
-
-h4 {
-  font-size: 2rem;
-  font-weight: 500;
-}
-
-h5 {
-  font-size: 1.5rem;
-  font-weight: 400;
-}
-
-p {
-  font-size: 1rem;
-  font-weight: 400;
-}
-
-a {
-  font-size: 1rem;
-  text-decoration: none;
-  font-weight: 400;
-}
-
-.navigation {
-  width: 100%;
-  height: 90px;
-  background-color: aqua;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-}
-
-.banner {
-  position: relative;
-  width: 100%;
-  height: 100vh;
-}
-
-.banner .banner-img {
-  position: absolute;
-  bottom: 10%;
-  right: 10%;
-}
-
-.banner .banner-img img {
-  width: 100%;
-  -o-object-fit: contain;
-  object-fit: contain;
-}
-
-.banner .banner-text {
-  position: absolute;
-  top: 20%;
-  padding: 2rem;
-  width: 50%;
-}
-
-.todolist {
-  position: relative;
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-}
-
-.todolist h3 {
-  padding: 2rem;
-}
-
-.todolist .list {
-  width: 80%;
-  margin: 0 auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-}
-
-.todolist .list .item {
-  width: 100%;
-  max-height: 500px;
-  height: 20vh;
-  min-height: 300px;
-  border-radius: 10px;
-  -webkit-box-shadow: 1px 1px 4px 1px rgba(0, 0, 0, 0.2);
-  box-shadow: 1px 1px 4px 1px rgba(0, 0, 0, 0.2);
-  padding: 2rem;
-  margin: 2rem 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-}
-
-.todolist .list .item .text .descprition {
-  width: 70%;
-  padding: 2rem 0;
-}
-
-.todolist .list .item .time-container {
-  width: 50px;
-  height: 50px;
-  background-color: aqua;
-}
-/*# sourceMappingURL=style.css.map */
