--- a/src/App.css
+++ b/src/App.css
@@ -1,216 +1,38 @@
-* {
-  margin: 0;
-  padding: 0;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
+.App {
+  text-align: center;
 }
 
-h1 {
-  font-size: 6rem;
-  font-weight: 800;
-}
-
-h2 {
-  font-size: 4rem;
-  font-weight: 700;
-}
-
-h3 {
-  font-size: 3rem;
-  font-weight: 600;
-}
-
-h4 {
-  font-size: 2rem;
-  font-weight: 500;
-}
-
-h5 {
-  font-size: 1.5rem;
-  font-weight: 400;
-}
-
-p {
-  font-size: 1rem;
-  font-weight: 400;
-}
-
-a {
-  font-size: 1rem;
-  text-decoration: none;
-  font-weight: 400;
-}
-
-.navigation {
-  width: 100%;
-  height: 90px;
-  background-color: aqua;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-}
-
-.contact-form {
-  position: relative;
-  width: 70%;
-  height: 80vh;
-  margin: 0 auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -ms-flex-pack: distribute;
-  justify-content: space-around;
-}
-
-.contact-form .alert {
-  font-family: "poppins", sans-serif;
-  padding: 10px 30px;
-  font-weight: 400;
-  color: #fff;
-  background-color: #43a047;
-  display: none;
-  -webkit-transition: 0.5s ease-in-out;
-  transition: 0.5s ease-in-out;
-}
-
-.contact-form .form {
-  position: relative;
-  height: 80%;
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  overflow: hidden;
-}
-
-.contact-form .form .form-name {
-  margin: 2rem 0;
-  position: relative;
-  width: 100%;
-}
-
-.contact-form .form .form-name input {
-  font-family: "poppins", sans-serif;
-  width: 100%;
-  height: 35px;
-  color: #252525;
-  border: none;
-  outline: none;
-  padding-top: 5px;
-}
-
-.contact-form .form .form-name input::-webkit-outer-spin-button,
-.contact-form .form .form-name input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
-}
-
-.contact-form .form .form-name label {
-  position: absolute;
-  font-family: "poppins", sans-serif;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 35px;
+.App-logo {
+  height: 40vmin;
   pointer-events: none;
-  border-bottom: 1px solid #bd9245;
 }
 
-.contact-form .form .form-name label::after {
-  content: "";
-  position: absolute;
-  left: 0;
-  bottom: -1px;
-  height: 35px;
-  width: 100%;
-  border-bottom: 3px solid #fcc85f;
-  -webkit-transform: translateX(-100%);
-  transform: translateX(-100%);
-  -webkit-transition: all 0.5s ease;
-  transition: all 0.5s ease;
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
 }
 
-.contact-form .form .form-name input:focus + .label-name .content-name,
-.contact-form .form .form-name input:valid + .label-name .content-name {
-  -webkit-transform: translateY(-50%);
-  transform: translateY(-50%);
-  color: #fcc85f;
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
 }
 
-.contact-form .form .form-name input:focus + .label-name::after,
-.contact-form .form .form-name input:valid + .label-name::after {
-  -webkit-transform: translateX(0%);
-  transform: translateX(0%);
+.App-link {
+  color: #61dafb;
 }
 
-.contact-form .form .content-name {
-  position: absolute;
-  font-size: 1rem;
-  font-weight: 400;
-  letter-spacing: 1.5px;
-  color: #bd9245;
-  bottom: 5px;
-  left: 0px;
-  -webkit-transition: all 0.5s ease;
-  transition: all 0.5s ease;
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
-
-.contact-form button {
-  position: absolute;
-  width: 30px;
-  height: 30px;
-  border-radius: 50%;
-  background-color: #fff;
-  border: none;
-  bottom: 0;
-  right: 0;
-  -webkit-transition: all 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
-  transition: all 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
-}
-
-.contact-form button svg path {
-  fill: #fcc85f;
-}
-
-.contact-form button:hover {
-  width: 40px;
-  height: 40px;
-  background-color: #fcc85f;
-}
-
-.contact-form button:hover svg path {
-  fill: #fff;
-}
-
-input[type="date"]:required:invalid::-webkit-datetime-edit {
-  color: transparent;
-}
-
-input[type="date"]:focus::-webkit-datetime-edit {
-  color: black !important;
-}
-/*# sourceMappingURL=form.css.map */
