--- a/src/Styles/tasks.css
+++ b/src/Styles/tasks.css
@@ -1,12 +1,21 @@
+body {
+  width: 100%;
+  background-image: url(../Assets/colorfulBack.png);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 .tasks {
   top: 20%;
   width: 93.75%;
+  min-height: 90vh;
   margin: 5rem auto 0 auto;
   background: linear-gradient(45deg, #e5e5e5, rgba(226, 227, 238, 0.2));
   border-radius: 50px 50px 0 0;
   border: 1px solid #e2e3ee;
   padding: 4rem 2rem;
-  backface-filter: blur(25px);
+  backdrop-filter: blur(30px);
 }
 
 .tasks .heading {
@@ -19,9 +28,9 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+  /* -webkit-box-align: center; */
+  /* -ms-flex-align: center; */
+  /* align-items: center; */
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   -webkit-transition: all 0.6s ease-in-out;
@@ -30,16 +39,62 @@
 }
 
 .tasks .lists .item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   margin: 2rem;
   position: relative;
   max-width: 720px;
-  width: 20%;
-  min-width: 300px;
+  width: 29%;
+  min-width: 360px;
+  min-height: 250px;
   background-color: #fff;
   border-radius: 20px;
   padding: 1rem;
   -webkit-transition: all 0.6s ease-in-out;
   transition: all 0.6s ease-in-out;
+}
+
+.tasks .lists .item .top-section {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+}
+
+.tasks .lists .item .top-section .options {
+  width: 96px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+}
+
+.tasks .lists .item .top-section .options .completed svg path {
+  transition: all 0.3s ease-in-out;
+  fill: #bac8df;
+}
+
+.tasks .lists .item .top-section .options .completed svg .checked {
+  fill: #6eff3a;
 }
 
 .tasks .lists .item .tagline {
@@ -52,6 +107,7 @@
 }
 
 .tasks .lists .item .description {
+  height: 100%;
   padding: 1rem 0;
 }
 
@@ -69,7 +125,7 @@
 }
 
 .tasks .lists .item .bottom-section .duration {
-  width: 120px;
+  /* width: 120px; */
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -78,15 +134,22 @@
   align-items: center;
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
-  justify-content: space-between;
+  justify-content: center;
 }
 
 .tasks .lists .item .bottom-section .duration .date {
-  color: #e5e5e5;
+  color: #bac8df;
+  padding: 0 1rem;
 }
 
 .tasks .lists .item .bottom-section .name {
   font-weight: 500;
+  color: #000;
+}
+
+.tasks .lists .item .bottom-section .domain {
+  font-weight: 400;
+  color: #bac8df;
 }
 
 @media screen and (max-width: 850px) {
