--- a/src/Styles/banner.css
+++ b/src/Styles/banner.css
@@ -52,15 +52,22 @@
   color: #b0b8d0;
 }
 
+.banner .text-container .btn-container {
+  display: flex;
+  width: 60%;
+  align-items: center;
+  justify-content: space-between;
+}
+
 .banner .text-container .btn {
   cursor: pointer;
   text-align: center;
   width: 15ch;
   padding: 1rem;
+  margin: 2rem 0;
   background: linear-gradient(45deg, #f8a7a2, #e5a7e1);
   border-radius: 50px;
   color: #fff;
-  margin: 2rem 0;
   -webkit-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
 }
