--- a/src/Styles/tasks.css
+++ b/src/Styles/tasks.css
@@ -1,9 +1,10 @@
 body {
-  width: 100%;
-  background-image: url(../Assets/colorfulBack.png);
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-size: cover;
+  /* width: 100%; */
+  min-height: 100vh;
+  /* background-image: url(../Assets/colorfulBack.png); */
+  /* background-position: center center; */
+  /* background-repeat: no-repeat; */
+  /* background-size: cover; */
 }
 
 .tasks {
