--- a/src/Styles/filterbar.css
+++ b/src/Styles/filterbar.css
@@ -1,26 +1,66 @@
-.filter-container svg {
-  position: absolute;
-  right: 20%;
-  /* margin: 0 auto; */
+.filter-container {
+  width: 100%;
+  height: 55px;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  margin: 2rem;
 }
 
-.filter-container {
+.filter-container .search-bar {
+  position: relative;
+  width: 70%;
+  height: 100%;
+}
+
+.filter-container .search-bar input {
+  width: 100%;
+  height: 100%;
+  height: 55px;
+  outline: none;
+  border: none;
+  border-radius: 20px;
+  padding: 0 1rem;
+  background-color: #fff;
+  color: #000;
+}
+
+.filter-container .search-bar svg {
+  position: absolute;
+  right: 25px;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
+.filter-container select {
   position: relative;
   width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-bottom: 10px;
-}
-
-.icon {
-}
-
-.filter {
-  width: 80%;
-  height: 55px;
-  text-align: center;
-  border: none;
+  min-width: 400px;
+  min-height: 55px;
+  height: 100%;
   outline: none;
+  border: none;
   border-radius: 20px;
+  padding: 0 1rem;
+  background-color: #fff;
+  color: #000;
+}
+
+.filter-container select option {
+  width: 100%;
+  height: 100%;
+  outline: none;
+  border: none;
+  border-radius: 20px;
+  padding: 0 1rem;
+  background-color: #fff;
+  color: #000;
 }
