--- a/src/Styles/form.css
+++ b/src/Styles/form.css
@@ -37,7 +37,8 @@
   width: 45%;
 }
 
-.container .form .row-1 .input-container input {
+.container .form .row-1 .input-container input,
+.container .form .row-1 .input-container #domain {
   width: 100%;
   height: 100%;
   height: 55px;
@@ -64,6 +65,23 @@
   padding: 0 1rem;
   background-color: #e6e6e6;
   color: #000;
+}
+
+.container .form .input-container textarea {
+  height: 100%;
+  height: 55px;
+  width: 100%;
+  outline: none;
+  border: none;
+  border-radius: 20px;
+  padding: 1rem;
+  background-color: #e6e6e6;
+  color: #000;
+  resize: none;
+}
+
+.container .form .input-container textarea::-webkit-scrollbar {
+  width: 0px;
 }
 
 .container .btn {
