--- a/src/Styles/teams.css
+++ b/src/Styles/teams.css
@@ -29,9 +29,9 @@
 }
 
 .teams .list .item {
-  width: 45%;
-  max-width: 1280px;
-  min-width: 360px;
+  width: 100%;
+  /* max-width: 1280px; */
+  /* min-width: 360px; */
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
