--- a/src/Styles/teams.css
+++ b/src/Styles/teams.css
@@ -88,13 +88,14 @@
 }
 
 .teams .list .item .mid .top .options {
-  width: 110px;
+  width: 250px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
   justify-content: space-between;
+  align-items: center;
 }
 
 .teams .list .item .mid .description {
