--- a/src/Styles/teams.css
+++ b/src/Styles/teams.css
@@ -1,9 +1,9 @@
 .teams {
   top: 20%;
   width: 93.75%;
-  margin: 5rem auto 0 auto;
+  margin: 5rem auto;
   background: linear-gradient(45deg, #e5e5e5, rgba(226, 227, 238, 0.2));
-  border-radius: 50px 50px 0 0;
+  border-radius: 50px;
   border: 1px solid #e2e3ee;
   padding: 4rem 2rem;
   backface-filter: blur(25px);
